added missing staged files for ShortURL redirect

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "chriss-new-url-shortener-app",
   "version": "1.0.0",
   "description": "A remake of the TinyApp app from Lighthouse Labs",
-  "main": "index.js",
+  "main": "express_server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chris Arsenault",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4"
   }
