--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "chriss-new-url-shortener-app",
+  "name": "Shorten-R-Us",
   "version": "1.0.0",
   "description": "A remake of the TinyApp app from Lighthouse Labs",
   "main": "express_server.js",
   "scripts": {
     "start": "nodemon express_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass --watch public/scss -o public/css"
   },
   "author": "Chris Arsenault chrisstanarsenault@gmail.com",
   "license": "ISC",
@@ -15,7 +16,8 @@
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "ejs": "^2.6.1",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "node-sass": "^4.12.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
