added a little bit of header alignment CSS

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shorten-R-Us",
+  "name": "Go Shorty",
   "version": "1.0.0",
   "description": "A remake of the TinyApp app from Lighthouse Labs",
   "main": "express_server.js",
